[gd_scene load_steps=6 format=2]

[ext_resource path="res://Imagens/Torreta.png" type="Texture" id=1]
[ext_resource path="res://Script_Torreta.gd" type="Script" id=2]
[ext_resource path="res://Imagens/Torreta_Off.png" type="Texture" id=3]
[ext_resource path="res://Sons/Tiro_Inimigo.tres" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[node name="Node2D" type="Node2D"]

[node name="Torreta" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Ligada" type="Sprite" parent="Torreta"]
visible = false
position = Vector2( 6, 0 )
rotation = 3.14159
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 1 )

[node name="Desligada" type="Sprite" parent="Torreta"]
position = Vector2( 6, 0 )
rotation = 3.14159
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torreta"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Torreta"]

[node name="Timer" type="Timer" parent="Torreta"]

[node name="Tiro_Inimigo" type="AudioStreamPlayer2D" parent="Torreta"]
stream = ExtResource( 4 )
bus = "Efeitos"

[connection signal="area_entered" from="Torreta" to="Torreta" method="Acerto_Dano"]
[connection signal="body_entered" from="Torreta" to="Torreta" method="Toque_Dano"]
[connection signal="timeout" from="Torreta/Timer" to="Torreta" method="Torreta_Recarregada"]
